// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkLabel snapshot renders 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "gap": "3px",
      "left": 6,
      "pointerEvents": "auto",
      "position": "fixed",
      "top": -4,
    }
  }
>
  <AutosizeInput
    injectStyles={true}
    inputClassName=""
    minWidth={1}
    onChange={[Function]}
  />
</div>
`;

exports[`MarkLabel snapshot renders 2`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "gap": "3px",
      "left": 5,
      "pointerEvents": "auto",
      "position": "fixed",
      "top": 5,
    }
  }
>
  <AutosizeInput
    injectStyles={true}
    inputClassName=""
    minWidth={1}
    onChange={[Function]}
  />
</div>
`;
